--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 	<head>
 		<title>Binding</title>
+		<link href="asset/reset.css" rel="stylesheet"> 
+		<link href="asset/common.css" rel="stylesheet"> 
+		<link href="asset/direction-1.css" rel="stylesheet">
+		<!-- <link href="asset/direction-2.css" rel="stylesheet"> -->
+		<!-- <link href="asset/direction-3.css" rel="stylesheet"> -->
 	</head>
 	<body>
 		<h1>binding</h1>
