--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>Binding</title>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="asset/reset.css" rel="stylesheet"> 
 		<link href="asset/common.css" rel="stylesheet"> 
 		<link href="asset/direction-1.css" rel="stylesheet">
