Add css styling

--- a/article1.html
+++ b/article1.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="asset/reset.css" rel="stylesheet" />
     <link href="asset/common.css" rel="stylesheet" />
-    <link href="asset/direction-1.css" rel="stylesheet" />
-    <!-- <link href="asset/direction-2.css" rel="stylesheet"> -->
+    <!-- <link href="asset/direction-1.css" rel="stylesheet" /> -->
+    <link href="asset/direction-2.css" rel="stylesheet">
     <!-- <link href="asset/direction-3.css" rel="stylesheet"> -->
+
+    <!-- google font -->
+     <!-- manrope -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <!-- alfa slab one -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <!-- Martian Mono  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+
   </head>
   <body>
     <nav>
