--- a/article1.html
+++ b/article1.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="asset/reset.css" rel="stylesheet" />
     <link href="asset/common.css" rel="stylesheet" />
-    <link href="asset/direction-1.css" rel="stylesheet" />
+    <!-- <link href="asset/direction-1.css" rel="stylesheet" /> -->
     <!-- <link href="asset/direction-2.css" rel="stylesheet"> -->
-    <!-- <link href="asset/direction-3.css" rel="stylesheet"> -->
+    <link href="asset/direction-3.css" rel="stylesheet">
 
     <!-- google font -->
      <!-- manrope -->
@@ -31,7 +31,18 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">  
-
+<!-- Poppins -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+<!-- Teko -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Alumni+Sans+Pinstripe:ital@0;1&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+<!-- Enriqueta -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Almarai:wght@300;400;700;800&family=Alumni+Sans+Pinstripe:ital@0;1&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Enriqueta:wght@400;500;600;700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&family=Slabo+13px&family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
   <body>
     <h5>
@@ -50,7 +61,7 @@
         HEADLINE
       </h4>
       <h1>
-        I wrote the book on user-friendly design. What I see today horrifies me
+        <div class="round">I wrote</div><div class="roundspace"> </div><div class="round">the</div><div class="round">book</div><div class="round">on</div> <div class="roundblack">userfriendly</div><div class="round">design.</div> <div class="round">What I see</div><div class="roundspace"> </div><div class="round">today</div><div class="roundred">horrifies</div><div class="round">me</div><div class="roundspace"> </div>
       </h1>
 
 
@@ -133,8 +144,9 @@
           world “I’m old and can’t function!” We can do better.
         </p>
       </section>
-      <section>
+      <article>
         <h3>Older consumers want and need</h3>
+        <section>
         <p>
           We age, we have more experience with life, which can make us better
           decision-makers and managers. Crystalized intelligence, it is called,
@@ -178,8 +190,10 @@
           making both attempts to help the viewer completely unhelpful.
         </p>
       </section>
+    </article>
+    <article>
+      <h3>Bad design abounds</h3>
       <section>
-        <h3>Bad design abounds</h3>
         <p>
           The problems I face are much milder than those faced by millions of
           aging people. With so many of us needing better devices, why are so
@@ -228,8 +242,10 @@
           stylish enough that everyone will want one.
         </p>
       </section>
+    </article>
+    <article>
+      <h3>Everyone needs better design</h3>
       <section>
-        <h3>Everyone needs better design</h3>
         <p>
           Do not think that thoughtful design is just for the elderly, or the
           sick, or the disabled. In the field of design, this is called
