Restructured during class based on demo and added new article

--- a/second-article/article2.html
+++ b/second-article/article2.html
@@ -4,11 +4,10 @@
     <title>article1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="asset/reset.css" rel="stylesheet" />
-    <link href="asset/common.css" rel="stylesheet" />
-    <link href="asset/direction-1.css" rel="stylesheet" />
-    <!-- <link href="asset/direction-2.css" rel="stylesheet"> -->
-    <!-- <link href="asset/direction-3.css" rel="stylesheet"> -->
+    <link href="../asset/common.css" rel="stylesheet" />
+    <link href="../asset/reset.css" rel="stylesheet" />
+    <link href="../second-article/direction-2.css" rel="stylesheet" />
+
 
     <!-- google font -->
      <!-- manrope -->
