Reorganize folder to make it live website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Binding</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../asset/common.css" rel="stylesheet" />
-    <link href="../asset/reset.css" rel="stylesheet" />
+    <link href="asset/common.css" rel="stylesheet" />
+    <link href="asset/reset.css" rel="stylesheet" />
     <link href="landing.css" rel="stylesheet" />
 
     <!-- google font -->
@@ -44,39 +44,44 @@
 </head>
   <body>
     <h5>
-Mika Arai    </h5>
+MIKA ARAI    </h5>
 <h1>Diversity & Inclusion</h1>
     <header>
 
-           <ul class="article">
-           <li><a href="article1.html">I wrote the book on user-friendly design.</a></li>
-           <li><a href="article2.html">There Is No Such Thing As Neutral Graphic Design</a></li>
-           <li><a href="article3.html">International Student Can teach us a lot about design education for all</a></li>
-           </ul>
-
-           <div class="grid-container">
-
-           <div class="card">
-            <div class="card-category">Diversity & Inclusion</div>
-            <h2 class="card-title"> I wrote the book on user-friendly design. What I see today horrifies me. </h2>
+      <div class="circle-container">
+        <div class="circle">
+          </div>
+      </div>
+      <div class="triangle-container">
+        <div class="triangle">
         </div>
-        
-        <div class="card">
-            <div class="card-category">Diversity & Inclusion</div>
-            <h2 class="card-title">There Is No Such Thing As Neutral Graphic Design</h2>
-        </div>
-
-        <div class="card">
-          <div class="card-category">Diversity & Inclusion</div>
-          <h2 class="card-title">International Student Can teach us a lot about design education for all</h2>
+      </div>
+      <!-- <div class="rectangle-container">
+        <div class="rectangle">
+          </div>
+      </div> -->
+<div class="star-container">
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+<div class="star"></div>
+</div>
+  </div>
       </div>
 
-</div>
-
-
-      </header>
-     </body>
-</html>
-    </nav>
+      
+    </header>
+<article>
+  <ul class="article">
+  <li><a href="article1.html">I wrote the book on user-friendly design.</a><h2>by Don Norman</h2></li>
+  <li><a href="article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Don Norman</h2></li>
+  <li><a href="article3.html">International Student Can teach us a lot about design education for all</a><h2>by Don Norman</h2></li>
+  </ul>
+</article>
   </body>
 </html>
