html css clean up/organize

--- a/third-article/article3.html
+++ b/third-article/article3.html
@@ -14,38 +14,47 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  <!-- alfa slab one -->
+  
+    <!-- alfa slab one -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  <!-- Martian Mono  -->
+  
+<!-- Martian Mono  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-<!-- geist -->
+
+  <!-- geist -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 <!-- Geist Mono -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">  
+
 <!-- Poppins -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 <!-- Teko -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Alumni+Sans+Pinstripe:ital@0;1&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+
 <!-- Enriqueta -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Almarai:wght@300;400;700;800&family=Alumni+Sans+Pinstripe:ital@0;1&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Enriqueta:wght@400;500;600;700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&family=Slabo+13px&family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
+
+
   <body>
-    <h5>
-MIKA ARAI    </h5>
+    <h5>MIKA ARAI</h5>
+
     <div class="container">
       <nav>
         <div class="navbar">
@@ -56,6 +65,7 @@ MIKA ARAI    </h5>
         </div>
       </nav>
       <div class="container-2">
+
     <header>
       <h4>
         HEADLINE
@@ -64,19 +74,27 @@ MIKA ARAI    </h5>
         I wrote the book on user-friendly design. What I see today horrifies me.
       </h1>
 
-
+<!-- shapes -->
       <div class="circle-container">
         <div class="circle">
+          </div>
+      </div>
+      <div class="circle-container-2">
+        <div class="circle-2">
           </div>
       </div>
       <div class="triangle-container">
         <div class="triangle">
         </div>
       </div>
-      <!-- <div class="rectangle-container">
+      <div class="triangle-container-2">
+        <div class="triangle-2">
+        </div>
+      </div>
+      <div class="rectangle-container">
         <div class="rectangle">
           </div>
-      </div> -->
+      </div>
 <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
@@ -88,6 +106,17 @@ MIKA ARAI    </h5>
 <div class="star"></div>
 <div class="star"></div>
 </div>
+<div class="star-container-2">
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  <div class="star-2"></div>
+  </div>
 
       <h2>
         The world is designed against the elderly, writes Don Norman,
@@ -96,6 +125,7 @@ MIKA ARAI    </h5>
       </h2>
       <div class="author">By Don Norman</div>
     </header>
+    
     <article>
       <section>
         <p>
@@ -283,7 +313,7 @@ MIKA ARAI    </h5>
   <em>Norman, Don.</em> 2019. <a href="
   https://www.fastcompany.com/90338379/i-wrote-the-book-on-user-friendly-design-what-i-see-today-horrifies-me">Link to article</a>
 <p>
-  © 2024 Mika Arai
+  © 2024 Typography & Interaction
 </p>
 
 </footer>
