clean up and added shapes from article to landing page for cohesive

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ MIKA ARAI    </h5>
         <div class="triangle">
         </div>
       </div>
-      <!-- <div class="rectangle-container">
+      <div class="rectangle-container">
         <div class="rectangle">
           </div>
-      </div> -->
+      </div>
 <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
