Link between pages

--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@ MIKA ARAI    </h5>
     </header>
 <article>
   <ul class="article">
-  <li><a href="article1.html">I wrote the book on user-friendly design.</a><h2>by Don Norman</h2></li>
-  <li><a href="article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Don Norman</h2></li>
-  <li><a href="article3.html">International Student Can teach us a lot about design education for all</a><h2>by Don Norman</h2></li>
+  <li><a href="/first-article/article1.html">I wrote the book on user-friendly design.</a><h2>by Don Norman</h2></li>
+  <li><a href="/second-article/article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Don Norman</h2></li>
+  <li><a href="/third-article/article3.html">International Student Can teach us a lot about design education for all</a><h2>by Don Norman</h2></li>
   </ul>
 </article>
   </body>
 </html>
+
+
