--- a/second-article/article2.html
+++ b/second-article/article2.html
@@ -49,10 +49,10 @@
     </h5>
     <nav>
       <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="article1.html">Art 1</a>
-        <a href="article2.html">Art 2</a>
-        <a href="article3.html">Art 3</a>
+        <a href="/index.html">Home</a>
+        <a href="/first-article/article1.html">Art 1</a>
+        <a href="/second-article/article2.html">Art 2</a>
+        <a href="/third-article/article3.html">Art 3</a>
       </div>
     </nav>
     <header>
