--- a/index.html
+++ b/index.html
@@ -17,39 +17,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  <!-- Martian Mono  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-<!-- geist -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-<!-- Geist Mono -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">  
-<!-- Poppins -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-<!-- Teko -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Alumni+Sans+Pinstripe:ital@0;1&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
-<!-- Enriqueta -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Almarai:wght@300;400;700;800&family=Alumni+Sans+Pinstripe:ital@0;1&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Enriqueta:wght@400;500;600;700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Luckiest+Guy&family=Manrope:wght@200..800&family=Martian+Mono:wght@100..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&family=Slabo+13px&family=Teko:wght@300..700&display=swap" rel="stylesheet">
-
 </head>
   <body>
     <h5>
 MIKA ARAI    </h5>
-<h1>Diversity & Inclusion</h1>
-    <header>
-
-      <div class="circle-container">
+<header>
+  <h1>We All Belong Here</h1>
+  <h3>
+    <p><em class="bold">This website celebrates <em class="color">diversity and inclusion </em>because the world is better in full color, just like our CSS gradients.</em>
+    </p>
+    <p>Handcrafted in Visual Studio Code using HTML and CSS (no frameworks, just raw code vibes). Responsively designed to fit every screen, from tiny pockets to massive monitors because inclusion applies to devices too!
+    </p>
+    </h3>
+  <div class="circle-container">
         <div class="circle">
           </div>
       </div>
@@ -73,15 +53,15 @@ MIKA ARAI    </h5>
 <div class="star"></div>
 </div>
   </div>
-      </div>
-
-      
+      </div>      
     </header>
+
+
 <article>
   <ul class="article">
-  <li><a href="/first-article/article1.html">I wrote the book on user-friendly design.</a><h2>by Don Norman</h2></li>
-  <li><a href="/second-article/article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Don Norman</h2></li>
-  <li><a href="/third-article/article3.html">International Student Can teach us a lot about design education for all</a><h2>by Don Norman</h2></li>
+  <li><a href="/first-article/article1.html">I wrote the book on user-friendly design. What I see today horrifies me.</a><h2>by Don Norman</h2></li>
+  <li><a href="/second-article/article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Ellen Lupton & Leslie Xia</h2></li>
+  <li><a href="/third-article/article3.html">International Student Can teach us a lot about design education for all</a><h2>by Caspar Lam & YuJune Park</h2></li>
   </ul>
 </article>
   </body>
