--- a/third-article/article3.html
+++ b/third-article/article3.html
@@ -19,7 +19,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  </head>
+<base href="/binding/">
+  
+</head>
 
 
   <body>
