--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-<base href="/binding/">
+<base href="/binding/" />
 </head>
   <body>
     <h5>
@@ -60,9 +60,9 @@ MIKA ARAI    </h5>
 
 <article>
   <ul class="article">
-  <li><a href="/first-article/article1.html">I wrote the book on user-friendly design. What I see today horrifies me.</a><h2>by Don Norman</h2></li>
-  <li><a href="/second-article/article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Ellen Lupton & Leslie Xia</h2></li>
-  <li><a href="/third-article/article3.html">International Student Can teach us a lot about design education for all</a><h2>by Caspar Lam & YuJune Park</h2></li>
+  <li><a href="first-article/article1.html">I wrote the book on user-friendly design. What I see today horrifies me.</a><h2>by Don Norman</h2></li>
+  <li><a href="second-article/article2.html">There Is No Such Thing As Neutral Graphic Design</a><h2>by Ellen Lupton & Leslie Xia</h2></li>
+  <li><a href="third-article/article3.html">International Student Can teach us a lot about design education for all</a><h2>by Caspar Lam & YuJune Park</h2></li>
   </ul>
 </article>
   </body>
