--- a/first-article/article1.html
+++ b/first-article/article1.html
@@ -31,7 +31,7 @@
       <nav>
         <div class="navbar">
           <a href="../index.html">Home</a>
-          <a href="article1.html">Art 1</a>
+          <a href="../first-article/article1.html">Art 1</a>
           <a href="../second-article/article2.html">Art 2</a>
           <a href="../third-article/article3.html">Art 3</a>
         </div>
