--- a/first-article/article1.html
+++ b/first-article/article1.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-  
+<base href="/binding/">
   </head>
 
 
@@ -30,9 +30,9 @@
       <nav>
         <div class="navbar">
           <a href="../index.html">Home</a>
-          <a href="article1.html">Art 1</a>
-          <a href="/second-article/article2.html">Art 2</a>
-          <a href="/third-article/article3.html">Art 3</a>
+          <a href="../first-article/article1.html">Art 1</a>
+          <a href="../second-article/article2.html">Art 2</a>
+          <a href="../third-article/article3.html">Art 3</a>
         </div>
       </nav>      
       <div class="container-2">
