made article 1 top background purple

--- a/first-article/article1.html
+++ b/first-article/article1.html
@@ -24,6 +24,7 @@
 
 
   <body>
+    <div class="h1-background">
     <h5>MIKA ARAI</h5>
 
     <div class="container">
@@ -38,35 +39,47 @@
       <div class="container-2">
 
     <header>
-      <h4>
+      <!-- <h4>
         HEADLINE
-      </h4>
+      </h4> -->
       <h1>
         I wrote the book on user-friendly design. What I see today horrifies me.
       </h1>
 
+      <h2>
+        The world is designed against the elderly, writes Don Norman,
+        83-year-old author of the industry bible Design of Everyday Things and a
+        former Apple VP.
+      </h2>
+    </header>
+  </div>
+    </div>
+    </div>
+  
+  <div class="author">By Don Norman</div>
+
 <!-- shapes -->
-      <div class="circle-container">
+      <!-- <div class="circle-container">
         <div class="circle">
-          </div>
+          </div> -->
       </div>
       <div class="circle-container-2">
         <div class="circle-2">
           </div>
       </div>
-      <div class="triangle-container">
+      <!-- <div class="triangle-container">
         <div class="triangle">
-        </div>
+        </div> -->
       </div>
       <div class="triangle-container-2">
         <div class="triangle-2">
         </div>
       </div>
-      <div class="rectangle-container">
+      <!-- <div class="rectangle-container">
         <div class="rectangle">
-          </div>
+          </div> -->
       </div>
-<div class="star-container">
+<!-- <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
 <div class="star"></div>
@@ -76,7 +89,7 @@
 <div class="star"></div>
 <div class="star"></div>
 <div class="star"></div>
-</div>
+</div> -->
 <div class="star-container-2">
   <div class="star-2"></div>
   <div class="star-2"></div>
@@ -89,13 +102,6 @@
   <div class="star-2"></div>
   </div>
 
-      <h2>
-        The world is designed against the elderly, writes Don Norman,
-        83-year-old author of the industry bible Design of Everyday Things and a
-        former Apple VP.
-      </h2>
-      <div class="author">By Don Norman</div>
-    </header>
 
     <article>
       <section>
