fixed the weird gap on the top right

--- a/first-article/article1.html
+++ b/first-article/article1.html
@@ -20,10 +20,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bayon&family=Bruno+Ace&family=Didact+Gothic&family=Manrope:wght@200..800&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <base href="/binding/">
-  </head>
+</head>
 
 
-  <body>
+<body>
     <div class="h1-background">
     <h5>MIKA ARAI</h5>
 
@@ -45,17 +45,17 @@
       <h1>
         I wrote the book on user-friendly design. What I see today horrifies me.
       </h1>
-
+      
       <h2>
         The world is designed against the elderly, writes Don Norman,
         83-year-old author of the industry bible Design of Everyday Things and a
         former Apple VP.
       </h2>
-    </header>
+    </div>
   </div>
-    </div>
-    </div>
-  
+  </div>
+    </header>
+    
   <div class="author">By Don Norman</div>
 
 <!-- shapes -->
@@ -70,15 +70,15 @@
       <!-- <div class="triangle-container">
         <div class="triangle">
         </div> -->
-      </div>
+      <!-- </div>
       <div class="triangle-container-2">
         <div class="triangle-2">
         </div>
-      </div>
+      </div> -->
       <!-- <div class="rectangle-container">
         <div class="rectangle">
           </div> -->
-      </div>
+      <!-- </div> -->
 <!-- <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
