--- a/second-article/article2.html
+++ b/second-article/article2.html
@@ -24,6 +24,8 @@
 
 
   <body>
+    <div class="h1-background">
+
     <h5>MIKA ARAI</h5>
 
     <div class="container">
@@ -38,26 +40,29 @@
       <div class="container-2">
 
     <header>
-      <h4>
+      <!-- <h4>
         HEADLINE
-      </h4>
+      </h4> -->
       <h1>
         There Is No Such Thing As Neutral Graphic Design
       </h1>
+    </div>
+    </div>
+    </div>
 
 <!-- shapes -->
-      <div class="circle-container">
+      <!-- <div class="circle-container">
         <div class="circle">
           </div>
-      </div>
+      </div> -->
       <div class="circle-container-2">
         <div class="circle-2">
           </div>
       </div>
-      <div class="triangle-container">
+      <!-- <div class="triangle-container">
         <div class="triangle">
         </div>
-      </div>
+      </div> -->
       <div class="triangle-container-2">
         <div class="triangle-2">
         </div>
@@ -66,7 +71,7 @@
         <div class="rectangle">
           </div>
       </div>
-<div class="star-container">
+<!-- <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
 <div class="star"></div>
@@ -76,7 +81,7 @@
 <div class="star"></div>
 <div class="star"></div>
 <div class="star"></div>
-</div>
+</div> -->
 <div class="star-container-2">
   <div class="star-2"></div>
   <div class="star-2"></div>
