--- a/first-article/article1.html
+++ b/first-article/article1.html
@@ -69,16 +69,16 @@
       </div>
       <!-- <div class="triangle-container">
         <div class="triangle">
-        </div> -->
-      <!-- </div>
+        </div>
+      </div> -->
       <div class="triangle-container-2">
         <div class="triangle-2">
         </div>
-      </div> -->
-      <!-- <div class="rectangle-container">
+      </div>
+      <div class="rectangle-container">
         <div class="rectangle">
-          </div> -->
-      <!-- </div> -->
+          </div> 
+      </div>
 <!-- <div class="star-container">
 <div class="star"></div>
 <div class="star"></div>
