added more shape in landing

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
           too!
         </p>
       </h3>
+
+      <!-- shape -->
+      <div class="international-container">
+        <div class="international">International student</div>
+      </div>
+      <div class="eldercommunity-container">
+        <div class="eldercommunity">Elder Community</div>
+      </div>
       <div class="circle-container">
         <div class="circle"></div>
       </div>
